--- a/python/model_data_analysis.ipynb
+++ b/python/model_data_analysis.ipynb
@@ -1,38 +1,49 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import joblib\n",
-    "import time\n",
-    "import json\n",
-    "from collections import Counter\n",
-    "import ast\n",
-    "\n",
-    "import numpy as np\n",
-    "from numpy.typing import NDArray\n",
-    "from typing import List, Tuple\n",
-    "\n",
-    "from sklearn import metrics\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold"
+    "Jupyter Notebook used to analyse the average and variance accuracy of the models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "from collections import Counter\n",
+    "import ast\n",
+    "\n",
+    "# Path to the folder containing the models\n",
+    "name_folder = \"model_run\"\n",
+    "# Number of csv files \"model_run{i+1}_simplified.csv\"\n",
+    "number_models = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function use to calculate the true and false positive probability for every classified label.\n",
     "def compute_tp_fp(true_labels, predicted_labels):\n",
-    "    true_labels = ast.literal_eval(true_labels)  # Convert to list\n",
+    "    true_labels = ast.literal_eval(true_labels)\n",
     "    predicted_labels = ast.literal_eval(predicted_labels)\n",
     "\n",
     "    true_counts = Counter(true_labels)\n",
@@ -52,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "name = \"../library_test/credentials/identity_attributes_driving_license.csv\"\n",
+    "# Recovery of the initial identities to recover their number of attributes\n",
+    "name = \"../typescript/credentials/identity_attributes_driving_license.csv\"\n",
     "df_labels = pd.read_csv(name)\n",
     "df_labels[\"JSON information\"] = df_labels[\"JSON information\"].apply(lambda x: json.loads(x))\n",
     "df_labels[\"number_attributes\"]= 12+df_labels[\"Number of general additional informations\"]+3*df_labels[\"Number of categories\"]+df_labels[\"Number of additional inforations of each categories\"].apply(lambda x: sum(map(int, x.split(','))))"
@@ -65,17 +76,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Process all rows\n",
+    "# Recovery of the average and mean of the scores of the models\n",
+    "score_results = []\n",
+    "for i in range(number_models):\n",
+    "    name_csv = f\"model_run{i+1}_simplified.csv\"\n",
+    "    df = pd.read_csv(f\"{name_folder}/{name_csv}\", index_col=0)\n",
+    "    for j, row in df.iterrows():\n",
+    "        # Recovery of the score of each models\n",
+    "        score_results.append({\n",
+    "            \"type_model\": row[\"type_model\"],\n",
+    "            \"regex\": row[\"regex\"],\n",
+    "            \"score\": row[\"score\"],\n",
+    "            \"score2\": row[\"score2\"],\n",
+    "            \"score10\": row[\"score10\"]\n",
+    "        })\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df_score_results =  pd.DataFrame(score_results)\n",
+    "\n",
+    "# Group by type_model and regex then compute mean and variance\n",
+    "df_score_results_groupby = df_score_results.groupby([\"type_model\", \"regex\"]).agg(\n",
+    "    Score_Mean=(\"score\", \"mean\"),\n",
+    "    Score_Var=(\"score\", \"var\"),\n",
+    "    Score2_Mean=(\"score2\", \"mean\"),\n",
+    "    Score2_Var=(\"score2\", \"var\"),\n",
+    "    Score10_Mean=(\"score10\", \"mean\"),\n",
+    "    Score10_Var=(\"score10\", \"var\")\n",
+    ").reset_index()\n",
+    "\n",
+    "# Store the result\n",
+    "df_score_results_groupby.to_csv(f\"{name_folder}/df_score_results_groupby.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recovery of the TP and FP percentage and variance of the models for each number of attributes\n",
+    "\n",
     "tp_fp_results = []\n",
     "score_results = []\n",
-    "name_folder = \"model trial 4 100 redo\"\n",
-    "runs = [2,3,4,5,12,13,14,15,16,17,18]\n",
-    "\n",
-    "for i in range(1):\n",
+    "for i in range(number_models):\n",
     "    name_csv = f\"model_run{i+1}_simplified.csv\"\n",
     "    df = pd.read_csv(f\"{name_folder}/{name_csv}\", index_col=0)\n",
     "\n",
@@ -91,14 +138,6 @@
     "                \"TP%\": tp_rate,\n",
     "                \"FP%\": fp_rate\n",
     "            })\n",
-    "        # Recovery of the score of each models\n",
-    "        score_results.append({\n",
-    "            \"type_model\": row[\"type_model\"],\n",
-    "            \"regex\": row[\"regex\"],\n",
-    "            \"score\": row[\"score\"],\n",
-    "            \"score2\": row[\"score2\"],\n",
-    "            \"score10\": row[\"score10\"]\n",
-    "        })\n",
     "        \n",
     "\n",
     "# Convert to DataFrame\n",
@@ -113,6 +152,7 @@
     "    FP_Var=(\"FP%\", \"var\")\n",
     ").reset_index()\n",
     "\n",
+    "# Group by type_model, regex, and number of attribute, then compute mean and variance\n",
     "df_tp_fp_results_groupby_number_attribute_only = df_tp_fp_results.groupby([\"type_model\", \"regex\", \"number_attributes\"]).agg(\n",
     "    TP_Mean=(\"TP%\", \"mean\"),\n",
     "    TP_Var=(\"TP%\", \"var\"),\n",
@@ -120,33 +160,15 @@
     "    FP_Var=(\"FP%\", \"var\")\n",
     ").reset_index()\n",
     "\n",
-    "# Group by type_model, regex, and Personal Number, then compute mean and variance\n",
-    "df_score_results_groupby = df_score_results.groupby([\"type_model\", \"regex\"]).agg(\n",
-    "    Score_Mean=(\"score\", \"mean\"),\n",
-    "    Score_Var=(\"score\", \"var\"),\n",
-    "    Score2_Mean=(\"score2\", \"mean\"),\n",
-    "    Score2_Var=(\"score2\", \"var\"),\n",
-    "    Score10_Mean=(\"score10\", \"mean\"),\n",
-    "    Score10_Var=(\"score10\", \"var\")\n",
-    ").reset_index()\n",
-    "\n",
-    "\n",
+    "# Store the data\n",
     "df_tp_fp_results_groupby_number_attribute_only.to_csv(f\"{name_folder}/df_tp_fp_results_groupby_number_attribute_only.csv\")\n",
-    "df_tp_fp_results_groupby.to_csv(f\"{name_folder}/df_tp_fp_results_groupby.csv\")\n",
-    "df_score_results_groupby.to_csv(f\"{name_folder}/df_score_results_groupby.csv\")"
+    "df_tp_fp_results_groupby.to_csv(f\"{name_folder}/df_tp_fp_results_groupby.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
