--- a/python/model_data_analysis.ipynb
+++ b/python/model_data_analysis.ipynb
@@ -11,16 +11,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,9 +21,9 @@
     "import ast\n",
     "\n",
     "# Path to the folder containing the models\n",
-    "name_folder = \"model_run\"\n",
+    "name_folder = \"models_run\"\n",
     "# Number of csv files \"model_run{i+1}_simplified.csv\"\n",
-    "number_models = 3"
+    "number_models = 1"
    ]
   },
   {
